@@ -3700,6 +3700,84 @@ int32_t SPVM_RUNTIME_API_call_sub_vm(SPVM_ENV* env, int32_t sub_id, SPVM_VALUE* 
         }
         break;
       }
+      case SPVM_OPCODE_C_ID_UNWEAKEN_FIELD: {
+        int32_t constant_pool_id = opcode->operand1;
+        int32_t field_id = runtime->constant_pool[package->constant_pool_base + constant_pool_id];
+        SPVM_RUNTIME_FIELD* field = &runtime->fields[field_id];
+        int32_t field_offset = field->offset;
+        void* object = *(void**)&object_vars[opcode->operand0];
+        if (object == NULL) {
+          SPVM_OBJECT* exception = env->new_str_raw(env, "Object to unweaken an object field must not be undefined.", 0);
+          env->set_exception(env, exception);
+          exception_flag = 1;
+        }
+        else {
+          void** ofield_address = (SPVM_VALUE_object*)((intptr_t)object + object_header_byte_size + field_offset);
+          env->unweaken(env, ofield_address);
+        }
+        break;
+      }
+      case SPVM_OPCODE_C_ID_UNWEAKEN_ARRAY_ELEMENT: {
+        void* array = *(void**)&object_vars[opcode->operand0];
+        int32_t index = int_vars[opcode->operand1];
+        if (__builtin_expect(!array, 0)) {
+          void* exception = env->new_str_raw(env, "Array must not be undef", 0);
+          env->set_exception(env, exception);
+          exception_flag = 1;
+        }
+        else {
+          if (__builtin_expect(index < 0 || index >= *(SPVM_VALUE_int*)((intptr_t)array + (intptr_t)env->object_array_length_offset), 0)) {
+            void* exception = env->new_str_raw(env, "Index is out of range", 0);
+            env->set_exception(env, exception);
+            exception_flag = 1;
+          }
+          else {
+            void** elements = (void**)((intptr_t)array + env->object_header_byte_size);
+            void** object_element_address = (void**)&elements[index];
+            env->unweaken(env, object_element_address);
+          }
+        }
+        break;
+      }
+      case SPVM_OPCODE_C_ID_ISWEAK_FIELD: {
+        int32_t constant_pool_id = opcode->operand1;
+        int32_t field_id = runtime->constant_pool[package->constant_pool_base + constant_pool_id];
+        SPVM_RUNTIME_FIELD* field = &runtime->fields[field_id];
+        int32_t field_offset = field->offset;
+        void* object = *(void**)&object_vars[opcode->operand0];
+        if (object == NULL) {
+          SPVM_OBJECT* exception = env->new_str_raw(env, "Object to isweak an object field must not be undefined.", 0);
+          env->set_exception(env, exception);
+          exception_flag = 1;
+        }
+        else {
+          void** ofield_address = (SPVM_VALUE_object*)((intptr_t)object + object_header_byte_size + field_offset);
+          env->isweak(env, ofield_address);
+        }
+        break;
+      }
+      case SPVM_OPCODE_C_ID_ISWEAK_ARRAY_ELEMENT: {
+        void* array = *(void**)&object_vars[opcode->operand0];
+        int32_t index = int_vars[opcode->operand1];
+        if (__builtin_expect(!array, 0)) {
+          void* exception = env->new_str_raw(env, "Array must not be undef", 0);
+          env->set_exception(env, exception);
+          exception_flag = 1;
+        }
+        else {
+          if (__builtin_expect(index < 0 || index >= *(SPVM_VALUE_int*)((intptr_t)array + (intptr_t)env->object_array_length_offset), 0)) {
+            void* exception = env->new_str_raw(env, "Index is out of range", 0);
+            env->set_exception(env, exception);
+            exception_flag = 1;
+          }
+          else {
+            void** elements = (void**)((intptr_t)array + env->object_header_byte_size);
+            void** object_element_address = (void**)&elements[index];
+            env->isweak(env, object_element_address);
+          }
+        }
+        break;
+      }
       case SPVM_OPCODE_C_ID_REF_BYTE:
         *(void**)&ref_vars[opcode->operand0] = &byte_vars[opcode->operand1];
         break;
